--- a/index.html
+++ b/index.html
@@ -30,44 +30,42 @@
 </head>
 
 <body>
-<h1>Test ETL4</h1>
+<h1>Test ETF0</h1>
 
 <div id="container">
     <div id="left">
-        Left stuff
+        <!--Left stuff-->
     </div>
     <div id="middle">
-        <form class="form-horizontal" action="myform.php">
+        <form class="form-horizontal">
             <fieldset>
 
                 <!-- Form Name -->
-                <legend>Send to Server</legend>
+                <legend>Enter Increment</legend>
 
-                <!-- Password input-->
+                <!-- Text input-->
                 <div class="control-group">
-                    <label class="control-label" for="passwordinput">Input Integer</label>
+                    <label class="control-label" for="intinput">Enter Integer</label>
                     <div class="controls">
-                        <input id="passwordinput" name="passwordinput"
-                               type="password" placeholder="1" class="input-xlarge">
-
+                        <input id="intinput" name="textinput" type="text"
+                               placeholder="0" class="input-xlarge">
+                        <p class="help-block">help</p>
                     </div>
                 </div>
 
                 <!-- Button -->
                 <div class="control-group">
-                    <label class="control-label" for="submitbutton">Submit your password</label>
+                    <label class="control-label" for="singlebutton">Submit</label>
                     <div class="controls">
-                        <button id="submitbutton" name="submitbutton"
-                                class="btn btn-primary">Submit</button>
+                        <button id="singlebutton" name="singlebutton" class="btn btn-primary">Submit</button>
                     </div>
                 </div>
 
             </fieldset>
         </form>
+
     </div>
 </div>
-
-
 
 
 
