--- a/index2.html
+++ b/index2.html
@@ -37,33 +37,32 @@
         Left stuff
     </div>
     <div id="middle">
-        <form class="form-horizontal" action="action.php">
+        <form class="form-horizontal">
             <fieldset>
 
                 <!-- Form Name -->
-                <legend>Send to Server</legend>
+                <legend>Form Name</legend>
 
-                <!-- Password input-->
+                <!-- Text input-->
                 <div class="control-group">
-                    <label class="control-label" for="passwordinput">Input Integer</label>
+                    <label class="control-label" for="textinput">Text Input</label>
                     <div class="controls">
-                        <input id="passwordinput" name="passwordinput"
-                               type="password" placeholder="2" class="input-xlarge">
-
+                        <input id="textinput" name="textinput" type="text" placeholder="placeholder" class="input-xlarge">
+                        <p class="help-block">help</p>
                     </div>
                 </div>
 
                 <!-- Button -->
                 <div class="control-group">
-                    <label class="control-label" for="submitbutton">Submit your password</label>
+                    <label class="control-label" for="singlebutton">Single Button</label>
                     <div class="controls">
-                        <button id="submitbutton" name="submitbutton"
-                                class="btn btn-primary">Submit</button>
+                        <button id="singlebutton" name="singlebutton" class="btn btn-primary">Button</button>
                     </div>
                 </div>
 
             </fieldset>
         </form>
+
     </div>
 </div>
 
