--- a/index.html
+++ b/index.html
@@ -37,33 +37,11 @@
         <!--Left stuff-->
     </div>
     <div id="middle">
-        <form class="form-horizontal">
-            <fieldset>
-
-                <!-- Form Name -->
-                <legend>Enter Increment</legend>
-
-                <!-- Text input-->
-                <div class="control-group">
-                    <label class="control-label" for="intinput">Enter Integer</label>
-                    <div class="controls">
-                        <input id="intinput" name="textinput" type="text"
-                               placeholder="0" class="input-xlarge">
-                        <p class="help-block">help</p>
-                    </div>
-                </div>
-
-                <!-- Button -->
-                <div class="control-group">
-                    <label class="control-label" for="singlebutton">Submit</label>
-                    <div class="controls">
-                        <button id="singlebutton" name="singlebutton" class="btn btn-primary">Submit</button>
-                    </div>
-                </div>
-
-            </fieldset>
+        <form action="action.php" method="post">
+            Name: <input type="text" name="name"><br>
+            E-mail: <input type="text" name="email"><br>
+            <button type="submit" class="btn btn-primary">Submit</button>
         </form>
-
     </div>
 </div>
 
