--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
     </div>
     <div id="middle">
         <form action="action.php" method="post">
-            Name: <input type="text" name="name"><br>
-            E-mail: <input type="text" name="email"><br>
+            <div class="form-group">
+                <label for="usr">Enter Integer:</label>
+                <input type="text" name="intText" class="form-control" id="usr">
+            </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
