--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!--Left stuff-->
     </div>
     <div id="middle">
-        <form action="action.php" method="post">
+        <form action="increment.php" method="post">
             <div class="form-group">
                 <label for="usr">Enter Integer:</label>
                 <input type="text" name="intText" class="form-control" id="usr">
