--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
     <div id="middle">
         <form action="increment.php" method="post">
             <div class="form-group">
-                <label for="usr">Enter Integer:</label>
+                <label for="usr">Enter a real number:</label>
                 <input type="text" name="intText" class="form-control" id="usr">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
+            will increment it by one
         </form>
     </div>
 </div>
